templates/gateway.yml
apiVersion: v1
kind: Template
metadata:
  name: community-gateway
labels:
  template: community-gateway
objects:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: community-gateway-config
  data:
    # envoy requires the file extension `yaml` (and not `yml`).
    config.yaml: |
      # The administration endpoint uses a Unix socket instead of TCP in order
      # to avoid exposing it outside of the pod. Requests for metrics and
      # probes will go via an HTTP listener that only accepts requests for the
      # /metrics and /ready paths.
      admin:
        access_log_path: /dev/null
        address:
          pipe:
            path: /sockets/admin.socket

      static_resources:

        ### Clusters ###
        clusters:
        # This backend is used to send metrics and probe requests to the admin endpoint.
        - name: admin
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: admin
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /sockets/admin.socket

        ### Listeners ###
        listeners:
        # The admin listener isn't exposed, and is used only by the service monitor to scrape metrics.
        - name: admin
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 9000
          filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: admin
                route_config:
                  name: admin
                  virtual_hosts:
                  - name: admin
                    domains:
                    - "*"
                    routes:
                    - name: ready
                      match:
                        path: /ready
                      route:
                        cluster: admin
                    - name: metrics
                      match:
                        path: /metrics
                      route:
                        cluster: admin
                        prefix_rewrite: /stats/prometheus
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
